--- a/src/gazebo_train_description/package.xml
+++ b/src/gazebo_train_description/package.xml
@@ -12,6 +12,9 @@
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
+  
   <export>
     <build_type>ament_python</build_type>
   </export>
