--- a/src/gazebo_train_description/setup.cfg
+++ b/src/gazebo_train_description/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/gazebo_train_description
+script_dir=$base/lib/gazebo_train_description
 [install]
-install-scripts=$base/lib/gazebo_train_description
+install_scripts=$base/lib/gazebo_train_description
