--- a/src/gazebo_train_driver/setup.cfg
+++ b/src/gazebo_train_driver/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/gazebo_train_driver
+script_dir=$base/lib/gazebo_train_driver
 [install]
-install-scripts=$base/lib/gazebo_train_driver
+install_scripts=$base/lib/gazebo_train_driver
