--- a/src/gazebo_train_gazebo/CMakeLists.txt
+++ b/src/gazebo_train_gazebo/CMakeLists.txt
@@ -30,7 +30,7 @@ include_directories(
   ${GAZEBO_INCLUDE_DIRS}
 )
 
-install(DIRECTORY launch models worlds
+install(DIRECTORY launch models worlds rviz
   DESTINATION share/${PROJECT_NAME}/
 )
 
