--- a/src/gazebo_train_driver/package.xml
+++ b/src/gazebo_train_driver/package.xml
@@ -7,10 +7,7 @@
   <maintainer email="1999.luigi@gmail.com">lf4943s</maintainer>
   <license>TODO: License declaration</license>
 
-  <test_depend>ament_copyright</test_depend>
-  <test_depend>ament_flake8</test_depend>
-  <test_depend>ament_pep257</test_depend>
-  <test_depend>python3-pytest</test_depend>
+  <exec_depend>train_interfaces</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
